tests/errors/syntax/default_not_in_switch/default_outside_of_switch.c
// 'default' statement not in switch statement
void main()
{
	switch (4);
	default:;
}
